# pte

./: .gitignore  README.md  benchmark.yaml  pyproject.toml
src/pte/: cli.py  config.py  executor.py  metrics.py  runner.py
